[package]
name = "norgberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
directories = "5.0.1"
norgopolis-module = "0.1.0"
rmpv = "1.0.1"
surrealdb = { version = "1.0.0", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "process", "io-std"] }
tokio-stream = "0.1.14"
